# api-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  flavorite_OAS_v1.yaml  localstack.env  main.py  openapi.yaml  requirements.txt  setup.cfg
.openapi-generator/: FILES
openapi_server/: main.py
openapi_server/apis/: restaurants_api.py  reviews_api.py  users_api.py
openapi_server/models/: api_response.py  create_review.py  create_user.py  favorite_food.py  list_favorite_foods.py  list_friends.py  list_restaurants.py  list_reviews.py  login_payload.py  login_user.py  restaurant.py  review.py  update_review.py  update_user.py  user.py
openapi_server/orms/: dynamodb_setup.py  review.py  user.py
src/openapi_server/apis/: users_api.py
src/openapi_server/models/: create_user.py  favorite_food.py  login_user.py  restaurant.py  review.py
tests/: test_pynamodb.py  test_restaurants_api.py  test_reviews_api.py  test_users_api.py
