[metadata]
name = openapi_server
version = 1.0.2
description = This is a Flavorite Server based on the OpenAPI 3.0 specification. 
long_description = file: README.md
keywords = OpenAPI Flavorite - OpenAPI 3.0
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =.
packages = find_namespace:

[options.packages.find]
where = .
